# Interhack_cargoletscode

./: Potencial.csv  README.md  index.html
Analisi_models/: filter_alerts.py  guia_analisis_datos.md  neteja_normalitzacio.ipynb  pipeline.py
Analisi_models/Models/: m0_perfil_cliente.py  m1_reposicion.py  m2_fuga_commodity.py  m3_fuga_tecnico.py
Analisi_models/output/: alertas.csv  alertas_filtered.csv  perfiles_m0.csv
Data/: Campañas.csv  Clientes.csv  feature_engineering_v2.py  feature_validation_v2.ipynb  process_datasheet.py
Data/baseCSV/: Potencial.csv  Productos.csv
assets/: index-B08ECsFv.css  index-BYY6f-yu.js
backend/: db.sqlite3  pyproject.toml
backend/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/management/commands/: import_alerts.py
backend/api/migrations/: 0001_initial.py  0002_alert_last_order_date.py
backend/api/tests/: test_setup.py
backend/config/: settings.py
frontend/src/: App.vue  main.js  style.css
frontend/src/entities/: Alert.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: AlertDetailView.vue  AlertListView.vue  AlertsView.vue  DashboardView.vue
